@@ -15,7 +15,7 @@ public class FullSearchTest {
                 new Task("2", "Second desc"),
                 new Task("1", "First desc")
         );
-        Set<String> expected = new HashSet<>(Arrays.asList("1", "2"));
+        Set<String> expected = new HashSet<>(List.of("1", "2"));
         assertThat(FullSearch.extraNumber(tasks), is(expected));
     }
 
@@ -30,7 +30,7 @@ public class FullSearchTest {
                 new Task("5", "First desc"),
                 new Task("3", "First desc")
         );
-        Set<String> expected = new HashSet<>(Arrays.asList("1", "2", "3", "4", "5"));
+        Set<String> expected = new HashSet<>(List.of("1", "2", "3", "4", "5"));
         assertThat(FullSearch.extraNumber(tasks), is(expected));
     }
 }
